# riskbalancer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
config/: categories.yaml  fx.example.yaml  fx.yaml  riskbalancer.example.yaml  riskbalancer.yaml  seed_plan.yaml
config/mappings/: ajbell.yaml  citi.yaml  ibkr.yaml  manual.yaml  ms401k.yaml  schwab.yaml
docs/: architecture.md  database-schema.md
src/riskbalancer/: __init__.py  cli.py  configuration.py  db.py  migrations.py  models.py  paths.py  plan_adjust.py  plan_bootstrap.py  plan_csv.py  portfolio.py  repositories.py  seed.py
src/riskbalancer/adapters/: __init__.py  aegon.py  aj_bell.py  base.py  citi.py  ibkr.py  ms401k.py  schwab.py
tasks/: lessons.md
tests/: conftest.py  test_adapters.py  test_cli_category.py  test_cli_fx.py  test_cli_helpers.py  test_cli_import_prompt.py  test_cli_instrument.py  test_cli_mapping.py  test_cli_plan_adjust.py  test_cli_plan_create_delete.py  test_cli_plan_csv.py  test_cli_portfolio.py  test_cli_user.py  test_configuration.py  test_db_schema.py  test_plan_adjust.py  test_plan_bootstrap.py  test_plan_csv.py  test_portfolio.py  test_seed.py
tests/fixtures/: aegon_sample.csv  aj_bell_sample.csv  citi_sample.csv  ibkr_sample.csv  ms401k_sample.csv  schwab_sample.csv
