[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riskbalancer"
version = "1.0.1"
description = "Portfolio risk balancing toolkit for multi-broker statements"
readme = "README.md"
authors = [{name = "RiskBalancer"}]
requires-python = ">=3.9"
dependencies = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=6.2"]

[project.urls]
Homepage = "https://github.com/emretezel/riskbalancer"

[project.scripts]
riskbalancer = "riskbalancer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
