[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "riskbalancer"
version = "1.0.1"
description = "Portfolio risk balancing toolkit for multi-broker statements (SQLite-backed)"
readme = "README.md"
authors = [{name = "RiskBalancer"}]
# Python 3.12 ships with `sqlite3` in the standard library and bundles a
# SQLite >= 3.37 on every supported platform, which is what this project
# needs for the `STRICT` table syntax used in `migrations.py`. The runtime
# also asserts the version at connect time via `db._require_modern_sqlite`,
# so a stale system SQLite produces a clear error rather than a confusing
# parse failure.
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0.3"]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.7",
    "mypy>=1.19.1",
    "types-PyYAML>=6.0.12.20250915",
]

[project.urls]
Homepage = "https://github.com/emretezel/riskbalancer"

[project.scripts]
riskbalancer = "riskbalancer.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["src/riskbalancer"]
mypy_path = "src"
warn_unused_configs = true
show_error_codes = true
pretty = true
